--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,132 @@ h1 {
   font-style: normal; }
 
 body {
-  background: #eee; }
+  background: #eee;
+  margin: 0; }
+
+@media screen and (max-width: 900px) {
+  a {
+    color: white; } }
+
+.header {
+  background: #2c2c2c;
+  border-radius: 0 0 30px 30px; }
+  .header .block-container {
+    padding-top: 42px;
+    padding-left: 227px;
+    padding-right: 227px; }
+    .header .block-container .top-panel {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
+      margin-bottom: 48px; }
+      .header .block-container .top-panel .logo-nav {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: start;
+            -ms-flex-pack: start;
+                justify-content: flex-start; }
+        .header .block-container .top-panel .logo-nav__logo img {
+          width: 45px;
+          height: 26px;
+          margin-right: 78px; }
+        .header .block-container .top-panel .logo-nav .nav__list {
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex;
+          margin: 0;
+          padding: 0;
+          list-style: none;
+          -webkit-box-pack: justify;
+              -ms-flex-pack: justify;
+                  justify-content: space-between;
+          line-height: 30px; }
+        .header .block-container .top-panel .logo-nav .nav__item {
+          margin-right: 64px; }
+        .header .block-container .top-panel .logo-nav .nav__link {
+          font-family: Poppins, sans-serif;
+          font-style: normal;
+          font-weight: bold;
+          font-size: 13px;
+          line-height: 150%;
+          letter-spacing: 3px;
+          color: #fff;
+          text-decoration: none; }
+      .header .block-container .top-panel .hire {
+        font-family: Poppins, sans-serif;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 13px;
+        line-height: 150%;
+        letter-spacing: 3px;
+        color: #fff;
+        text-decoration: none;
+        line-height: 30px; }
+    .header .block-container .header-info {
+      display: grid;
+      grid-template-columns: 1fr 1fr; }
+      .header .block-container .header-info .text-side {
+        -ms-flex-item-align: center;
+            align-self: center; }
+        .header .block-container .header-info .text-side__heading {
+          font-family: Poppins, sans-serif;
+          font-style: normal;
+          font-weight: 600;
+          font-size: 64px;
+          line-height: 68px;
+          letter-spacing: -2px;
+          color: #fff; }
+        .header .block-container .header-info .text-side__subheading {
+          font-family: "Open Sans", sans-serif;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 18px;
+          line-height: 150%;
+          color: #fff; }
+        .header .block-container .header-info .text-side__link {
+          display: block;
+          width: 226px;
+          height: 50px;
+          line-height: 50px;
+          text-align: center;
+          color: white;
+          background: #2060f6;
+          border-radius: 8px;
+          text-decoration: none; }
+      .header .block-container .header-info__img-side {
+        background-image: url(../images/upd/header-img.png);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        height: 680px;
+        width: 43vw;
+        position: relative;
+        right: -227px;
+        border-radius: 30px 0; }
+        .header .block-container .header-info__img-side .img-side {
+          position: absolute;
+          bottom: 48px;
+          left: 144px; }
+          .header .block-container .header-info__img-side .img-side__heading {
+            font-family: Poppins, sans-serif;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 13px;
+            line-height: 150%;
+            letter-spacing: 3px;
+            color: #fff;
+            text-decoration: none; }
+          .header .block-container .header-info__img-side .img-side__subheading {
+            font-family: "Open Sans", sans-serif;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 14px;
+            line-height: 140%;
+            color: #fff;
+            max-width: 264px; }
 
 /*# sourceMappingURL=main.css.map */
