--- a/styles/main.css
+++ b/styles/main.css
@@ -70,7 +70,7 @@ a {
         .header .block-container .top-panel .logo-nav .hamburger {
           position: relative;
           top: -16px;
-          left: -200px; }
+          right: 1px; }
           .header .block-container .top-panel .logo-nav .hamburger__check {
             opacity: 0; }
           .header .block-container .top-panel .logo-nav .hamburger-logo {
@@ -172,7 +172,7 @@ a {
             width: 100%;
             height: 2px;
             background: #2060f6;
-            border-radius: 4px; }
+            border-radius: 50%; }
     .header .block-container .header-info {
       display: -webkit-box;
       display: -ms-flexbox;
