--- a/styles/main.css
+++ b/styles/main.css
@@ -131,7 +131,6 @@ a {
               width: 100%;
               height: 2px;
               background: #2060f6;
-              border-radius: 50%;
               margin-bottom: -2px; }
       .header .block-container .top-panel .hamburger-checkbox {
         display: none; }
@@ -171,8 +170,7 @@ a {
             display: block;
             width: 100%;
             height: 2px;
-            background: #2060f6;
-            border-radius: 50%; }
+            background: #2060f6; }
     .header .block-container .header-info {
       display: -webkit-box;
       display: -ms-flexbox;
