--- a/styles/main.css
+++ b/styles/main.css
@@ -252,13 +252,10 @@ a {
               background-color: #fff;
               border-radius: 50%;
               text-align: center;
-              -webkit-transition: -webkit-box-shadow 200ms ease-in-out;
-              transition: -webkit-box-shadow 200ms ease-in-out;
-              transition: box-shadow 200ms ease-in-out;
-              transition: box-shadow 200ms ease-in-out, -webkit-box-shadow 200ms ease-in-out; }
+              -webkit-transition: background-color 200ms ease-in-out;
+              transition: background-color 200ms ease-in-out; }
               .header .block-container .header-info__img-side .img-side .arrows .arrow:hover {
-                -webkit-box-shadow: 0 0 12px 12px #2060f6 inset;
-                        box-shadow: 0 0 12px 12px #2060f6 inset; }
+                background-color: rgba(32, 96, 246, 0.2); }
               .header .block-container .header-info__img-side .img-side .arrows .arrow .arrow-img {
                 width: 5.5px;
                 height: 9px; }
@@ -464,12 +461,35 @@ a {
         height: 264px;
         background-color: #fff;
         border-radius: 16px;
-        padding: 32px;
         -webkit-box-sizing: border-box;
                 box-sizing: border-box;
-        position: relative; }
+        position: relative;
+        z-index: 99; }
         .main-container .process__blocks .blocks .block:last-child {
           margin-top: 30px; }
+        .main-container .process__blocks .blocks .block a {
+          display: block;
+          padding: 32px;
+          height: 100%; }
+        .main-container .process__blocks .blocks .block .arrow-img {
+          width: 40px;
+          height: 40px;
+          border-radius: 50%;
+          background: #2060f6;
+          line-height: 45px;
+          text-align: center;
+          display: inline-block;
+          margin-right: 16px;
+          -webkit-transition: -webkit-transform 300ms;
+          transition: -webkit-transform 300ms;
+          transition: transform 300ms;
+          transition: transform 300ms, -webkit-transform 300ms; }
+          .main-container .process__blocks .blocks .block .arrow-img__img {
+            width: 16px;
+            height: 16px; }
+        .main-container .process__blocks .blocks .block:hover .arrow-img {
+          -webkit-transform: scale(1.2);
+                  transform: scale(1.2); }
         .main-container .process__blocks .blocks .block__number {
           font-family: "Poppins", sans-serif;
           font-style: normal;
@@ -502,36 +522,23 @@ a {
           line-height: 40px;
           width: 159px;
           border-radius: 20px; }
-          .main-container .process__blocks .blocks .block__link a {
-            display: block; }
-            .main-container .process__blocks .blocks .block__link a .arrow-img {
-              width: 40px;
-              height: 40px;
-              border-radius: 50%;
-              background: #2060f6;
-              line-height: 45px;
-              text-align: center;
-              display: inline-block;
-              margin-right: 16px;
-              -webkit-transition: -webkit-transform 300ms;
-              transition: -webkit-transform 300ms;
-              transition: transform 300ms;
-              transition: transform 300ms, -webkit-transform 300ms; }
-              .main-container .process__blocks .blocks .block__link a .arrow-img__img {
-                width: 16px;
-                height: 16px; }
-            .main-container .process__blocks .blocks .block__link a:hover .arrow-img {
-              -webkit-transform: scale(1.2);
-                      transform: scale(1.2); }
-            .main-container .process__blocks .blocks .block__link a p {
-              font-family: "Poppins", sans-serif;
-              font-style: normal;
-              font-weight: 600;
-              line-height: 150%;
-              color: #253757;
-              font-size: 15px;
-              position: relative;
-              bottom: 2px;
-              display: inline-block; }
+          .main-container .process__blocks .blocks .block__link p {
+            font-family: "Poppins", sans-serif;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 150%;
+            color: #253757;
+            font-size: 15px;
+            position: relative;
+            bottom: 2px;
+            display: inline-block; }
+
+.main-container .approach-outter {
+  padding-left: 121px; }
+  .main-container .approach-outter .approach-inner {
+    background: #2c2c2c;
+    border-radius: 30px 0 0 30px;
+    padding: 204px 0 0 204px;
+    position: relative; }
 
 /*# sourceMappingURL=main.css.map */
