--- a/styles/main.css
+++ b/styles/main.css
@@ -37,8 +37,8 @@ a {
     padding-right: 14vw; }
     @media screen and (max-width: 1024px) {
       .header .block-container {
-        padding-left: 100px;
-        padding-right: 100px; } }
+        padding-left: 50px;
+        padding-right: 50px; } }
     .header .block-container .top-panel {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -479,7 +479,8 @@ a {
         @media screen and (max-width: 1024px) {
           .main-container .process__blocks .blocks_shifted {
             position: static;
-            margin-bottom: 30px; } }
+            margin-bottom: 30px;
+            margin-right: 0; } }
       .main-container .process__blocks .blocks .block {
         height: 264px;
         background-color: #fff;
@@ -577,8 +578,8 @@ a {
                 flex-direction: column;
         -ms-flex-pack: distribute;
             justify-content: space-around;
-        padding: 100px;
-        padding-top: 204px; } }
+        padding: 20px;
+        padding-top: 100px; } }
     .main-container .approach-outter .approach-inner .approach-info {
       margin-bottom: 140px;
       margin-right: 16px;
@@ -606,6 +607,9 @@ a {
         font-size: 32px;
         color: #fff;
         margin-bottom: 32px; }
+        @media screen and (max-width: 1024px) {
+          .main-container .approach-outter .approach-inner .approach-info__header {
+            font-size: 20px; } }
       .main-container .approach-outter .approach-inner .approach-info .block-line {
         display: -webkit-box;
         display: -ms-flexbox;
@@ -618,11 +622,19 @@ a {
             -ms-flex-align: center;
                 align-items: center;
         margin-bottom: 64px; }
+        @media screen and (max-width: 1024px) {
+          .main-container .approach-outter .approach-inner .approach-info .block-line {
+            margin-bottom: 30px; } }
         .main-container .approach-outter .approach-inner .approach-info .block-line__img {
           display: inline-block;
           width: 64px;
           height: 64px;
           margin-right: 34px; }
+          @media screen and (max-width: 1024px) {
+            .main-container .approach-outter .approach-inner .approach-info .block-line__img {
+              width: 30px;
+              height: 30px;
+              margin-right: 20px; } }
         .main-container .approach-outter .approach-inner .approach-info .block-line__text {
           font-family: "Open Sans", sans-serif;
           font-style: normal;
@@ -632,6 +644,9 @@ a {
           font-size: 15px;
           color: #fff;
           font-weight: normal; }
+          @media screen and (max-width: 1024px) {
+            .main-container .approach-outter .approach-inner .approach-info .block-line__text {
+              font-size: 11px; } }
     .main-container .approach-outter .approach-inner .approach-photo {
       max-width: 43vw; }
       @media screen and (max-width: 1024px) {
@@ -979,6 +994,15 @@ a {
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start; }
+    @media screen and (max-width: 1024px) {
+      .footer .forms {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center; } }
     .footer .forms .message__header {
       font-family: "Poppins", sans-serif;
       font-style: normal;
@@ -1013,6 +1037,9 @@ a {
       transition: border-bottom 300ms;
       margin-bottom: 48px;
       width: 460px; }
+      @media screen and (max-width: 1024px) {
+        .footer .forms .message .form-default {
+          width: 100%; } }
       .footer .forms .message .form-default:focus {
         border-bottom: 2px solid #144ed4; }
     .footer .forms .message .form__textarea {
@@ -1037,8 +1064,18 @@ a {
       border: none; }
       .footer .forms .message .form__submit:hover {
         background: #144ed5; }
+      @media screen and (max-width: 1024px) {
+        .footer .forms .message .form__submit {
+          margin: 0 auto; } }
     .footer .forms__contact {
       margin-left: 14vw; }
+      @media screen and (max-width: 1024px) {
+        .footer .forms__contact {
+          margin-left: 0; } }
+    @media screen and (max-width: 1024px) {
+      .footer .forms .contact {
+        margin-bottom: 50px;
+        text-align: center; } }
     .footer .forms .contact__header {
       font-family: "Poppins", sans-serif;
       font-style: normal;
@@ -1070,10 +1107,20 @@ a {
       margin-bottom: 48px; }
       .footer .forms .contact__phone-numbers a, .footer .forms .contact__address-location a {
         color: #fff; }
-    .footer .forms .contact__socials-icons .socials-icon {
-      display: inline-block;
-      width: 15px;
-      height: 24px; }
+    .footer .forms .contact__socials-icons {
+      margin-top: 16px; }
+      .footer .forms .contact__socials-icons .socials-icon {
+        display: inline-block;
+        width: 24px;
+        height: 24px;
+        -webkit-transition: -webkit-transform 300ms;
+        transition: -webkit-transform 300ms;
+        transition: transform 300ms;
+        transition: transform 300ms, -webkit-transform 300ms;
+        margin: 10px 20px; }
+        .footer .forms .contact__socials-icons .socials-icon:hover {
+          -webkit-transform: scale(1.2);
+                  transform: scale(1.2); }
   .footer .logo-nav {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1081,19 +1128,29 @@ a {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between; }
-    .footer .logo-nav__logo {
-      line-height: 30px;
-      margin-bottom: -4px; }
-      .footer .logo-nav__logo img {
-        width: 45px;
-        height: 26px;
-        margin-right: 78px;
-        -webkit-transition: all 300ms;
-        transition: all 300ms; }
-        .footer .logo-nav__logo img:hover {
-          -webkit-transform: scale(1.05);
-                  transform: scale(1.05);
-          opacity: 0.8; }
+    @media screen and (max-width: 1024px) {
+      .footer .logo-nav {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center; } }
+    .footer .logo-nav__logo img {
+      width: 45px;
+      height: 26px;
+      margin-right: 78px;
+      -webkit-transition: all 300ms;
+      transition: all 300ms; }
+      .footer .logo-nav__logo img:hover {
+        -webkit-transform: scale(1.05);
+                transform: scale(1.05);
+        opacity: 0.8; }
+      @media screen and (max-width: 1024px) {
+        .footer .logo-nav__logo img {
+          margin-right: 0;
+          margin-bottom: 20px; } }
     .footer .logo-nav .nav__list {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -1105,8 +1162,21 @@ a {
           -ms-flex-pack: justify;
               justify-content: space-between;
       line-height: 30px; }
+      @media screen and (max-width: 1024px) {
+        .footer .logo-nav .nav__list {
+          -webkit-box-orient: vertical;
+          -webkit-box-direction: normal;
+              -ms-flex-direction: column;
+                  flex-direction: column;
+          -webkit-box-align: center;
+              -ms-flex-align: center;
+                  align-items: center; } }
     .footer .logo-nav .nav__item {
       margin-right: 4vw; }
+      @media screen and (max-width: 1024px) {
+        .footer .logo-nav .nav__item {
+          margin-right: 0;
+          margin-bottom: 20px; } }
     .footer .logo-nav .nav__link {
       font-family: Poppins, sans-serif;
       font-style: normal;
