--- a/styles/main.css
+++ b/styles/main.css
@@ -44,8 +44,8 @@ a {
     max-width: 1600px; }
   .header .block-container {
     padding-top: 42px;
-    padding-left: 14vw;
-    padding-right: 14vw; }
+    padding-left: 13vw;
+    padding-right: 13vw; }
     @media screen and (max-width: 1024px) {
       .header .block-container {
         padding-left: 50px;
@@ -206,6 +206,10 @@ a {
           letter-spacing: -2px;
           color: #fff;
           padding-bottom: 32px; }
+          @media screen and (max-width: 400px) {
+            .header .block-container .header-info .text-side__heading {
+              font-size: 32px;
+              line-height: 34px; } }
         .header .block-container .header-info .text-side__subheading {
           font-family: "Open Sans", sans-serif;
           font-style: normal;
@@ -248,8 +252,12 @@ a {
         background-size: cover;
         min-width: 43vw;
         position: relative;
-        right: -14vw;
-        border-radius: 30px 0; }
+        right: -13vw;
+        border-radius: 30px 0;
+        overflow: hidden; }
+        @media screen and (max-width: 400px) {
+          .header .block-container .header-info__img-side {
+            display: none; } }
         @media screen and (max-width: 1024px) {
           .header .block-container .header-info__img-side {
             right: 0;
@@ -334,7 +342,7 @@ a {
   .main-container .main-inner {
     max-width: 1600px; }
   .main-container .about-info {
-    margin: 148px 227px; }
+    margin: 148px 14vw; }
     @media screen and (max-width: 1024px) {
       .main-container .about-info {
         margin: 50px; } }
@@ -362,10 +370,16 @@ a {
     margin: 0 auto;
     background: #fff;
     border-radius: 30px;
-    padding: 128px 227px 134px; }
+    padding: 128px 14vw 134px; }
     @media screen and (max-width: 1024px) {
       .main-container .expertise {
         padding: 50px; } }
+    @media screen and (max-width: 400px) {
+      .main-container .expertise {
+        padding: 5px;
+        width: 300px;
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box; } }
     .main-container .expertise__heading {
       font-family: "Poppins", sans-serif;
       font-style: normal;
@@ -375,6 +389,10 @@ a {
       font-size: 52px;
       text-align: center;
       margin-bottom: 64px; }
+      @media screen and (max-width: 1024px) {
+        .main-container .expertise__heading {
+          font-size: 32px;
+          margin-bottom: 20px; } }
     .main-container .expertise__services {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -394,6 +412,9 @@ a {
         border-radius: 10px;
         -webkit-transition: all 300ms;
         transition: all 300ms; }
+        @media screen and (max-width: 400px) {
+          .main-container .expertise__services .service {
+            width: 200px; } }
         .main-container .expertise__services .service:hover {
           background-color: rgba(213, 213, 213, 0.2); }
           .main-container .expertise__services .service:hover img {
@@ -434,7 +455,7 @@ a {
           text-align: center; }
   .main-container .process {
     margin: 0 auto;
-    padding: 0 227px;
+    padding: 0 14vw;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -449,7 +470,18 @@ a {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
             -ms-flex-direction: column;
-                flex-direction: column; } }
+                flex-direction: column;
+        padding: 100px; } }
+    @media screen and (max-width: 400px) {
+      .main-container .process {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        padding: 10px;
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box;
+        max-width: 320px; } }
     .main-container .process .info {
       max-width: 23vw; }
       @media screen and (max-width: 1024px) {
@@ -479,6 +511,9 @@ a {
         font-size: 32px;
         line-height: 130%;
         margin-bottom: 24px; }
+        @media screen and (max-width: 400px) {
+          .main-container .process .info__main-header {
+            font-size: 24px; } }
       .main-container .process .info__text {
         font-family: "Open Sans", sans-serif;
         font-style: normal;
@@ -597,6 +632,16 @@ a {
               display: inline-block; }
   .main-container .approach-outter {
     padding-left: 121px; }
+    @media screen and (max-width: 800px) {
+      .main-container .approach-outter {
+        padding-left: 50px; } }
+    @media screen and (max-width: 400px) {
+      .main-container .approach-outter {
+        padding-left: 15px;
+        width: 300px;
+        margin: 0 auto;
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box; } }
     .main-container .approach-outter .approach-inner {
       background: #2c2c2c;
       border-radius: 30px 0 0 30px;
@@ -618,6 +663,9 @@ a {
               justify-content: space-around;
           padding: 20px;
           padding-top: 100px; } }
+      @media screen and (max-width: 400px) {
+        .main-container .approach-outter .approach-inner {
+          padding: 10px; } }
       .main-container .approach-outter .approach-inner .approach-info {
         margin-bottom: 140px;
         margin-right: 16px;
@@ -700,10 +748,13 @@ a {
             max-width: 100%;
             border-radius: 30px; } }
   .main-container .testimonials {
-    padding: 148px 227px; }
+    padding: 148px 14vw; }
     @media screen and (max-width: 1024px) {
       .main-container .testimonials {
         padding: 50px; } }
+    @media screen and (max-width: 400px) {
+      .main-container .testimonials {
+        padding: 20px; } }
     .main-container .testimonials__subheader {
       font-family: "Poppins", sans-serif;
       font-style: normal;
@@ -746,6 +797,9 @@ a {
         text-align: center;
         width: 314px;
         margin-bottom: 50px; }
+        @media screen and (max-width: 400px) {
+          .main-container .testimonials__feedbacks .feedback {
+            max-width: 300px; } }
         .main-container .testimonials__feedbacks .feedback .rect {
           position: absolute; }
         .main-container .testimonials__feedbacks .feedback__photo {
@@ -809,6 +863,13 @@ a {
       .main-container .components {
         padding: 20px;
         text-align: center; } }
+    @media screen and (max-width: 400px) {
+      .main-container .components {
+        padding: 5px;
+        width: 300px;
+        margin: 0 auto;
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box; } }
     .main-container .components__header {
       font-family: "Poppins", sans-serif;
       font-style: normal;
@@ -820,6 +881,9 @@ a {
       @media screen and (max-width: 1024px) {
         .main-container .components__header {
           font-size: 32px; } }
+      @media screen and (max-width: 400px) {
+        .main-container .components__header {
+          font-size: 20px; } }
     .main-container .components__text {
       font-family: "Open Sans", sans-serif;
       font-style: normal;
@@ -834,6 +898,10 @@ a {
       @media screen and (max-width: 1024px) {
         .main-container .components__text {
           margin-bottom: 20px; } }
+      @media screen and (max-width: 400px) {
+        .main-container .components__text {
+          font-size: 11px;
+          max-width: 250px; } }
     .main-container .components__btn {
       font-family: "Poppins", sans-serif;
       font-style: normal;
@@ -853,6 +921,10 @@ a {
       transition: background 300ms; }
       .main-container .components__btn:hover {
         background: #144ed5; }
+      @media screen and (max-width: 400px) {
+        .main-container .components__btn {
+          font-size: 11px;
+          width: 250px; } }
     @media screen and (max-width: 1024px) {
       .main-container .components__figure {
         display: none; } }
@@ -1043,7 +1115,7 @@ a {
           align-items: center;
   background-color: #2c2c2c;
   border-radius: 30px 30px 0 0;
-  padding: 11vw 227px 87px; }
+  padding: 11vw 14vw 87px; }
   .footer .footer-inner {
     max-width: 1600px; }
   .footer .forms {
@@ -1127,7 +1199,7 @@ a {
         .footer .forms .message .form__submit {
           margin: 0 auto; } }
     .footer .forms__contact {
-      margin-left: 227px; }
+      margin-left: 14vw; }
       @media screen and (max-width: 1024px) {
         .footer .forms__contact {
           margin-left: 0; } }
